--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/montserrat": "^5.0.13",
     "@mui/icons-material": "^5.14.12",
     "@mui/material": "^5.14.12",
     "next": "13.5.4",
