basic stripe functionality

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,5 @@ PORT = 5000
 DB=mongodb://mongodb/mern_app
 JWTPRIVATEKEY=api_key
 SALT=10
+STRIPE_SECRET_KEY=api_key
+STRIPE_PUBLISHABLE_KEY=api_key
