--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,10 +2,10 @@ FROM node:21-alpine
 
 WORKDIR /app
 
-COPY package.json .
+COPY . .
 
 RUN npm install
 
-EXPOSE 5000
+EXPOSE 3000
 
-CMD ["npm","start"]
+CMD ["npm","run", "dev"]
