--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,10 @@
 		"@fontsource/montserrat": "^5.0.13",
 		"@mui/icons-material": "^5.14.12",
 		"@mui/material": "^5.14.12",
+		"chart.js": "^4.4.0",
 		"next": "13.5.4",
 		"react": "^18",
+		"react-chartjs-2": "^5.2.0",
 		"react-dom": "^18",
 		"react-icons": "^4.11.0",
 		"swiper": "^10.3.1"
