--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
 		"@mui/icons-material": "^5.14.12",
 		"@mui/material": "^5.14.12",
 		"chart.js": "^4.4.0",
-		"next": "13.5.4",
+		"next": "^14.0.1",
 		"react": "^18",
 		"react-chartjs-2": "^5.2.0",
 		"react-dom": "^18",
