--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
 		"mongoose": "^7.2.2",
 		"multer": "^1.4.5-lts.1",
 		"nodemon": "^2.0.22",
-		"stripe": "^13.9.0"
+		"stripe": "^13.9.0",
+		"ws": "^8.14.2"
 	}
 }
