--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,15 +9,16 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@emotion/cache": "^11.11.0",
 		"@emotion/react": "^11.11.1",
 		"@emotion/styled": "^11.11.0",
 		"@fontsource/montserrat": "^5.0.13",
 		"@mui/icons-material": "^5.14.12",
 		"@mui/material": "^5.14.12",
+		"@mui/material-nextjs": "^5.15.0",
 		"next": "^14.0.1",
 		"react": "^18",
 		"react-dom": "^18",
-		"react-icons": "^4.11.0",
 		"swiper": "^11.0.4"
 	},
 	"devDependencies": {
