--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services: # lista kontenerów do stworzenia
         image: "mongo" # obraz na podstawie którego będzie bazował kontener
         ports:
             - "27017:27017"
-        volumes: # lista podpiętych wolumenów
-            - ./data:/data/db # dołączenie folderu data, do ścieżki /data/db w kontenrze aby zachować dane pomiędzy uruchomieniami
+        # volumes: # lista podpiętych wolumenów
+            # - ./data:/data/db # dołączenie folderu data, do ścieżki /data/db w kontenrze aby zachować dane pomiędzy uruchomieniami
         networks: # lista sieci do których ma być podłączony kontener
             - backend
 
@@ -13,9 +13,9 @@ services: # lista kontenerów do stworzenia
         build: ./backend # użycie dockerfile'a z folderu backend
         ports: # przypisanie portów
             - "5000:5000" # przypisanie portu 5000 hosta do portu 5000 dockera
-        volumes:
-            - ./backend:/app # przypisanie folderu backend do ścieżki /app w kontenerze
-            - ./backend/node_modules:/app/node_modules # stworzenie woluminu node_modules z obrazu stworzonego przez dockerfile'a
+        # volumes:
+        #     - ./backend:/app # przypisanie folderu backend do ścieżki /app w kontenerze
+        #     - ./backend/node_modules:/app/node_modules # stworzenie woluminu node_modules z obrazu stworzonego przez dockerfile'a
         depends_on: # wskazanie na kontener, który powinien zostać uruchomiony przed tym konetenerem
             - mongodb # wskazanie na mongodb
         networks:
@@ -26,8 +26,8 @@ services: # lista kontenerów do stworzenia
         build: ./frontend # użycie dockerfile'a z folderu frontend
         ports:
             - "3000:3000" # przypisanie portu 3000 hosta do portu 3000 dockera
-        volumes:
-            - ./frontend/:/app/ # przypisanie folder ./frontend/src do /app/src
+        # volumes:
+            # - ./frontend/:/app/ # przypisanie folder ./frontend/src do /app/src
         depends_on:
             - backend
         networks:
