--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,8 +4,8 @@ WORKDIR /app
 
 COPY . .
 
-# RUN npm install
-
+RUN npm install
+RUN npm run build
 EXPOSE 3000
 
-CMD ["npm","run", "dev"]
+CMD ["npm","run", "start"]
