--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,40 @@
 version: "3.8" # wersja docker compose'a
 services: # lista kontenerów do stworzenia
-    mongodb: # kontener mongodb
-        image: "mongo" # obraz na podstawie którego będzie bazował kontener
-        ports:
-            - "27017:27017"
-        volumes: # lista podpiętych wolumenów
-            - ./data:/data/db # dołączenie folderu data, do ścieżki /data/db w kontenrze aby zachować dane pomiędzy uruchomieniami
-        networks: # lista sieci do których ma być podłączony kontener
-            - backend
+  mongodb: # kontener mongodb
+    image: "mongo" # obraz na podstawie którego będzie bazował kontener
+    ports:
+      - "27017:27017"
+    volumes: # lista podpiętych wolumenów
+      - ./data:/data/db # dołączenie folderu data, do ścieżki /data/db w kontenrze aby zachować dane pomiędzy uruchomieniami
+    networks: # lista sieci do których ma być podłączony kontener
+      - backend
 
-    backend:
-        build: ./backend # użycie dockerfile'a z folderu backend
-        ports: # przypisanie portów
-            - "5000:5000" # przypisanie portu 5000 hosta do portu 5000 dockera
-        volumes:
-            - ./backend:/app # przypisanie folderu backend do ścieżki /app w kontenerze
-        depends_on: # wskazanie na kontener, który powinien zostać uruchomiony przed tym konetenerem
-            - mongodb # wskazanie na mongodb
-        networks:
-            - backend
-            - frontend
+  backend:
+    build: ./backend # użycie dockerfile'a z folderu backend
+    ports: # przypisanie portów
+      - "5000:5000" # przypisanie portu 5000 hosta do portu 5000 dockera
+    volumes:
+      # - ./backend:/app # przypisanie folderu backend do ścieżki /app w kontenerze
+      - ./backend/videos:/app/videos
+      - ./backend/series_thumbnails:/app//series_thumbnails
+      - /app/node_modules
+    depends_on: # wskazanie na kontener, który powinien zostać uruchomiony przed tym konetenerem
+      - mongodb # wskazanie na mongodb
+    networks:
+      - backend
+      - frontend
 
-    frontend:
-        build: ./frontend # użycie dockerfile'a z folderu frontend
-        ports:
-            - "3000:3000" # przypisanie portu 3000 hosta do portu 3000 dockera
-        volumes:
-            - ./frontend/:/app/ # przypisanie folder ./frontend/src do /app/src
-        depends_on:
-            - backend
-        networks:
-            - frontend
+  frontend:
+    build: ./frontend # użycie dockerfile'a z folderu frontend
+    ports:
+      - "3000:3000" # przypisanie portu 3000 hosta do portu 3000 dockera
+    # volumes:
+    #   - ./frontend:/app/ # przypisanie folder ./frontend/src do /app/
+    #   - /app/node_modules
+    depends_on:
+      - backend
+    networks:
+      - frontend
 networks:
-    backend:
-    frontend:
+  backend:
+  frontend:
